# diabetes-prediction-logistic-regression

./: .gitignore  README.md  main.py  pyproject.toml
src/: train_model.py
