[project]
name = "diabetes-prediction-logistic-regression"
version = "0.1.0"
description = "Predict diabetes risk with a logistic regression model."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.4.2",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
]
